# aranet4-data-saver

./: .gitignore  .pre-commit-config.yaml  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  README.md  aranet-collector  aranet-data-saver.sh  aranet4_data_saver  aranet4_data_saver.py  aranet_data_saver.py  aranet_visualizer.py  build.sh  project.yml  pyproject.toml  requirements.txt  run.py  run_daily.sh  scheduler.py  visualizer.py
.github/workflows/: ci.yml  release.yml
Aranet4Logger/: Aranet4LoggerApp.swift
Aranet4Logger/BLE/: AranetProtocol.swift  AranetSession.swift  AsyncLock.swift  BluetoothManager.swift
Aranet4Logger/Collection/: CSVImporter.swift  ConfigStore.swift  Coordinator.swift
Aranet4Logger/LoginItem/: LoginItemManager.swift
Aranet4Logger/Menu/: AppState.swift  MenuView.swift
Aranet4Logger/Models/: Models.swift
Aranet4Logger/Settings/: SettingsView.swift  SettingsWindowController.swift  UnitSettings.swift
Aranet4Logger/Storage/: Database.swift
Aranet4Logger/Support/: AppSupport.swift  Aranet4Logger.entitlements  CLI.swift  Info.plist  TimeGrid.swift  UpdaterManager.swift
Aranet4LoggerTests/: AranetProtocolTests.swift  CSVImporterTests.swift  DatabaseTests.swift  TimeGridTests.swift  UnitSettingsTests.swift
config/: config_template.yaml
src/: aranet_data_saver.py
templates/: index.html
