[project]
name = "aranet-data-saver"
version = "0.1.0"
description = "Utility to save data from Aranet4 air quality monitors"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Aaron Meurer"}
]
dependencies = [
    "aranet4",
    "pyyaml"
]

[project.scripts]
aranet-data-saver = "aranet_data_saver:main"