[project]
name = "aranet4-data-saver"
version = "0.1.0"
description = "Utility to save data from Aranet4 air quality monitors"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Aaron Meurer"}
]
dependencies = [
    "aranet4",
    "pyyaml"
]

[project.scripts]
aranet-data-saver = "aranet4_data_saver:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "types-PyYAML"
]

[tool.ruff]
line-length = 100
target-version = "py37"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",   # PEP8 naming
]
ignore = ["E501"]  # Ignore "line too long" warnings

[tool.ruff.isort]
known-first-party = ["aranet4_data_saver"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
